<resources>
    <string name="app_name">Ote</string>
    <string name="ok">OK</string>
    <string name="on_demand_delivery">On-Demand Delivery</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="test_name">Firstname, Lastname</string>
    <string name="get_fare">Get Fare</string>
    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="what_is_your_drop_off">What is your drop off address?</string>
    <string name="search_address">Search Address</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="set_pickup">Set Pickup Location</string>
    <string name="set_dropoff">Set Dropoff Location</string>
    <string name="pick_from">From?</string>
    <string name="where_to">Where to?</string>
    <string name="request_details">Request Details</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="back">Back</string>
    <string name="request_rider">Request Rider</string>
    <string name="pickup_contact_name">Pickup Contact Name</string>
    <string name="pickup_contact_number">Pickup Contact Number</string>
    <string name="dropoff_address">Drop off Address</string>
    <string name="dropoff_contact_name">Drop-off Contact Name</string>
    <string name="dropoff_contact_number">Drop-off Contact Number</string>
    <string name="item_value_cost">Item Value/Cost Of Item</string>
    <string name="leave_a_note">Leave a note</string>
    <string name="test_email">kisumu@ote.com</string>
    <string name="test_phone">+254 701 010 101</string>
    <string name="history">History</string>
    <string name="wallet">Wallet</string>
    <string name="no_order_records">No order records for the provided user details</string>
    <string name="no_transactions">No wallet records for the provided user details</string>
    <string name="available_balance">Available Balance</string>
    <string name="topup_wallet">Topup Wallet</string>
    <string name="wallet_history">Wallet History</string>
    <string name="no_activities">You have no activities</string>
    <string name="finished">Finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="balance_place_holder">KES 0.00</string>
    <string name="default_fare">KES 250</string>
    <string name="input_missing">Input Missing</string>
    <string name="make_payment">Make Payment</string>
    <string name="finish">Finish</string>
    <string name="order_summary">Order Summary</string>
    <string name="delivery_fare">Delivery Fare</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="login">Login</string>
    <string name="you_recently_logged_out">*You recently logged out, please login to continue.</string>
    <string name="login_error">Something went wrong while logging you in. Please try again later.</string>
    <string name="registration_error">Something went wrong while registering your account. Please try again later.</string>
    <string name="search_location">Search Location</string>
    <string name="pending">Pending</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="delivery_title">Your delivery with Ote</string>
    <string name="sample_date">9 Apr 2019</string>
    <string name="payment">Payment</string>
    <string name="mpesa">MPESA</string>
    <string name="cash">Cash</string>
    <string name="need_help">Need help?</string>
    <string name="contact_us">Contact Us</string>
    <string name="record_feedback">Leave us Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create an Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="agree_tcs"><![CDATA[I agree to the <a href="https://ote.com/tcs"><u>TERMS AND CONDITIONS</u></a>]]></string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="accept_terms">Please accept our terms and conditions before creating an account.</string>
    <string name="verify_phone_number">Phone Number Verification</string>
    <string name="confirm">Confirm</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="waiting_for_verification">Verification Code</string>
    <string name="verification_hint">_ _ _ _ _ _</string>
    <string name="resend">Resend Code</string>
    <string name="change_number">Change Number</string>
    <string name="error_detail">Something went wrong%s</string>
    <string name="otp_sent">Please type the verification code sent to %s \n</string>
    <string name="verification_cancel_title">Cancel verification</string>
    <string name="verification_cancel_message">Verification is in progress! do you want to cancel and go back?</string>
    <string name="reply">Reply</string>
    <string name="error_request">Unable to process request at this time</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="take_from_camera">Take from Camera</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="your_journey">Your Delivery with Ote</string>
    <string name="test_date">9 Apr 2019</string>
    <string name="currency">KES %s</string>
    <string name="confirm_order">Confirm Order Pricing</string>
    <string name="proceed">Continue</string>
    <string name="order_cost">KES 200</string>
    <string name="pickup_arrives">Rider arrives in 15mins</string>
    <string name="sign_in">Sign In</string>
    <string name="new_here_sign_up">New here? Sign Up</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="phone_no_or_email">Phone No or Email</string>
    <string name="image">image</string>
    <string name="no_active_internet">No active internet connection</string>
    <string name="required">Required</string>
    <string name="sign_up_description">Welcome to Ote Deliveries. Please fill in your details below to create an account</string>
    <string name="kenya_phone_code">+254</string>
    <string name="phone_no_hint">e.g. 701234234</string>
    <string name="password_short">Password must be at least 8 characters</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="phone_no_required">Phone No is required</string>
    <string name="invalid_phone">Invalid Phone No</string>
    <string name="exit">Exit</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_permission_description">Ote requires some permissions in order to serve you best. Please grant them in the next dialog.</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="pick_pickup_address">Pick Pickup Address</string>
    <string name="pick_location">Pick Location</string>
    <string name="pick_delivery_address">Pick Delivery Address</string>
    <string name="sample_place_primary_text">LakeHub</string>
    <string name="sample_place_secondary_text">Okore Road, Kisumu, Kenya</string>
    <string name="no_connection_text">Couldn\'t connect to internet</string>
    <string name="connectivity_failure_desc">Check your connection and try again</string>
    <string name="search_for_a_location">Search for a location</string>
    <string name="pickup">Pickup</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery">Delivery</string>
    <string name="stop">Stop</string>
    <string name="add_a_stop">Add a stop</string>
    <string name="motorbike">Motorbike</string>
    <string name="sample_price">ksh500.00</string>
    <string name="tuktuk">Tuktuk</string>
    <string name="three_tonne_truck">3 tonne truck</string>
    <string name="six_tonne_truck">6 tonne truck</string>
    <string name="dump_truck">Dump Truck</string>
    <string name="place_order">Place Order</string>
    <string name="what_do_you_want_delivered">What do you want delivered? *</string>
    <string name="pick_up_time_for_your_order">Pick up time for your order</string>
    <string name="as_soon_as_possible">As soon as possible</string>
    <string name="instructions">Instructions</string>
    <string name="additional_instructions">Additional instructions</string>
    <string name="do_you_have_preferred_driver_at_your_pick_up_location">Do you have preferred driver at your pick up location?</string>
    <string name="select">Select</string>
    <string name="enter_their_phone_number_or_the_vehicle_s_number_plate_to_pair">Enter their phone number or the vehicle\'s number plate to pair</string>
    <string name="yes_lower_case">Yes</string>
    <string name="no_lower_case">No</string>
    <string name="getting_prices">Getting prices…</string>
    <string name="same_address_err">Pickup and delivery address cannot be the same</string>
</resources>