<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/main_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_on_demand_delivery"
            android:title="@string/on_demand_delivery"
            android:icon="@drawable/ic_motorcycle"/>
        <item
            android:id="@+id/action_account"
            android:title="@string/account"
            android:icon="@drawable/ic_user"/>
    </group>

    <group
        android:id="@+id/sub_actions"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_power"/>
    </group>
</menu>