<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingEnd="10dp"
    android:paddingStart="0dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_marker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/image"
        android:layout_marginStart="10dp"
        android:tint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_place_primary_text"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/product_sans_regular"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tvSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_place_secondary_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrimary"
        app:layout_constraintTop_toBottomOf="@+id/tvPrimary"
        android:fontFamily="@font/product_sans_regular"
        android:singleLine="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>