<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMotor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icMotor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_motocross"
            android:tint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motorbike"
            android:fontFamily="@font/product_sans_regular"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/icMotor"
            app:layout_constraintTop_toTopOf="@+id/icMotor"
            app:layout_constraintBottom_toBottomOf="@+id/icMotor"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tvMotorPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_price"
            android:fontFamily="@font/product_sans_regular"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/icMotor"
            app:layout_constraintBottom_toBottomOf="@+id/icMotor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>