<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="br.com.zup.multistatelayout.MultiStateLayout" />
    </data>
    <br.com.zup.multistatelayout.MultiStateLayout
        android:id="@+id/verification_code_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:msl_loadingLayout="@layout/loading_layout">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/top_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:tint="@color/colorWhite"
                    android:src="@drawable/ic_back_toolbar"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/verify_phone_number"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_toolbar" />
            </LinearLayout>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layout_buttons"
                android:layout_below="@+id/toolbar">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/intro_act_padding">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting_for_verification"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

                    <!-- Phone Number -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_number_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        app:errorTextAppearance="@style/TextLabel"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_number_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/grey_60"
                            android:importantForAutofill="no"
                            android:enabled="false"
                            android:gravity="center"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/one_time_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/message_otp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:fontFamily="@font/noto_sans_light"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/verification_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:visibility="gone"/>

                    <!-- Verification Code -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/verification_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/grey_60"
                        android:importantForAutofill="no"
                        android:hint="@string/verification_hint"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:visibility="gone"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/resend_code_button"
                            style="@style/ButtonAccent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/resend"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                            android:layout_alignParentStart="true"
                            android:visibility="gone"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/change_number_button"
                            style="@style/ButtonAccent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/change_number"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                            android:layout_alignParentEnd="true"
                            android:visibility="gone"/>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
            <RelativeLayout
                android:id="@+id/layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_80"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/spacing_middle">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/lower_back_button"
                    style="@style/ButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/noto_sans_light"
                    android:gravity="center"
                    android:text="@string/back"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/confirm_button"
                    style="@style/ButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/confirm"/>
            </RelativeLayout>
        </RelativeLayout>
    </br.com.zup.multistatelayout.MultiStateLayout>
</layout>